--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.text_field :itenary %>
 
   <%= f.label :date_time %>
-  <%= f.text_field :date_time %>
+  <%= f.datetime_field :date_time %>
 
   <%= f.label :location %>
   <%= f.text_field :location %>
